--- a/skills.html
+++ b/skills.html
@@ -38,9 +38,10 @@
             <div class="card">
               <h3><i class="fa-solid fa-code"></i> Languages</h3>
               <ul class="skill-list">
-                <li class="skill-chip"><i class="fa-solid fa-c"></i> C</li>
-                <li class="skill-chip"><i class="fa-solid fa-c"></i> C++</li>
-                <li class="skill-chip"><i class="fa-solid fa-mug-saucer"></i> Java</li>
+                <li class="skill-chip"> C</li>
+                <li class="skill-chip"> C++</li>
+                <li class="skill-chip"><i class="fa-brands fa-java"></i> Java</li>
+                <li class="skill-chip"><i class="fa-brands fa-python"></i> Python</li>
                 <li class="skill-chip"><i class="fa-brands fa-js"></i> JavaScript</li>
                 <li class="skill-chip"><i class="fa-solid fa-database"></i> SQL</li>
               </ul>
